pkg/lang/syntax/testdata/ub/lower/valid/source-library.ub
greeting: resource {
  outputs: {
    message: { value: 'hello' }
  }
}

lookup: data {
  outputs: {}
}
